# abrasci

./: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  fly.toml  pyproject.toml
migrations/: env.py
migrations/versions/: 672e4917e7f9_create_patient_table.py  bf6ed4acf2c1_create_users_table.py  cc78decb6e3e_remove_role_column.py  fb3b9c433786_add_observacoes_to_patient_table.py  fb859d6fc3ba_users_full_name.py
src/: cli.py  database.py  main.py  settings.py
src/dashboard/: routes.py
src/patient/: schemas.py
src/static/js/: ampiCalculation.js  checkLogin.js
src/templates/: ampi.html  base.html  dashboard.html  edit_patient.html  login.html  patient.html  patients.html  register.html  testes_de_rastreamento  users.html
src/users/: routes.py  schemas.py
